# Dashboard-Pertumbuhan-Customer

./: .streamlit  README.md  download  download (3)  main_2026Q1.py  pyproject.toml  railway.json  📄_Summary (2).py
.streamlit/: config.toml
archived/V1/: 1_📊_Dashboard.py
archived/V2/: 1_📊_Dashboard.py
assets/css/: styles.css
data/: 202501 - LIST ALL NETWORK_geotagging_final.xlsx  Data Booking AGG_v3.parquet  Data Booking AGG_v4.parquet  Data Cabang.xlsx  Data Cabang2.xlsx  Data Customer - Age Group.parquet  Data Customer - LoB First.parquet  Data Customer AGG.xlsx  Data Customer AGG_v2.xlsx  Data Customer AGG_v3.parquet  Data Customer AGG_v4.parquet  Data Customer AGG_v5.parquet  Data Customer AGG_v6.parquet  Data Dealer dan Kompetitor.xlsx  GIS LOCATION.xlsx  LapakGIS_Batas_Kabupaten_2024.json  LapakGIS_Batas_Kecamatan_2024.json  LapakGIS_Batas_Provinsi_2024.json  Merged Data.xlsx
data_2026Q1/: Data Customer - Age Group_2026Q1.parquet  Data Customer - LoB First_2026Q1.parquet  Data Dealer dan Kompetitor.xlsx  data ufi.xlsx
data_2026Q1/2010/: Data Customer - Age Group 2010_2026Q1.parquet  Data Customer - LoB First 2010_2026Q1.parquet
